--- a/.gitignore
+++ b/.gitignore
@@ -74,10 +74,10 @@ dmypy.json
 .pyre/
 .pytype/
 cython_debug/
-src/JestingLang/JParsing/parsetab.py
-src/JestingLang/JParsing/parser.out
 .idea
 bin/python3.10
 bin/python3
 bin/python
-src/JestingLang/JParsing/LexerParser_cachedParseTable.py
+src/JestingLang/parsetab.py
+src/JestingLang/parser.out
+src/JestingLang/LexerParser_cachedParseTable.py
